# retrofail

./: .gitignore  Dockerfile  README.md  agent_example.py  benchmark.json  benchmark.sh  fly.toml  pyproject.toml  setup.sh  vercel.json
api/: _db.py  health.py  leaderboard.py  submissions.py  targets.py
cli/: retrofail.py
public/: deck.html  index.html
retrofail/: cli.py
server/: main.py
server/static/: index.html
solver/: solve.py
targets/: generate.py  hidden.csv  manifest.json  public.csv
verifier/: verify.py
